--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" 
-			data-th-fragment="layout-enchere(titrePage, contenuPage, ressourcesSupp)">
+			data-th-fragment="layout-auctions(titrePage, contenuPage, ressourcesSupp)">
 <head>
 <meta charset="UTF-8">
 <title data-th-replace="${titrePage}">Page title</title>
