--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html html xmlns="http://www.thymeleaf.org" data-th-replace="~{fragments/layout :: layout-enchere(titrePage= ~{:: title},
+<html html xmlns="http://www.thymeleaf.org" data-th-replace="~{fragments/layout :: layout-auctions(titrePage= ~{:: title},
 																							contenuPage= ~{:: .center-main},
 																							ressourcesSupp= ~{})}">
 
@@ -22,18 +22,18 @@
 
 	<select id="listeCat">
 		<option value="0">Catégorie : </option>
-		<option data-th-each="categorie : ${listeCategorie}" th:value="${categorie.noCategorie}" th:text="${categorie.libelle}"></option>
+		<option data-th-each="category : ${listCategory}" th:value="${category.idCategory}" th:text="${category.wording}"></option>
 	</select>
 
 	<div class="article-list">
 
-		<div class="article-card" data-th-each="item : ${articleVendu}">
+		<div class="article-card" data-th-each="item : ${itemSold}">
 			<div class="rounded-likes">
-				<span data-th-text="*{item.miseAPrix}">0</span> €
+				<span data-th-text="*{item.initialPrice}">0</span> €
 				<p>👌</p>
 			</div>
 
-			<h4 data-th-text="*{item.nomArticle}">Nom de l'article</h4>
+			<h4 data-th-text="*{item.name}">Nom de l'article</h4>
 
 			<div class="article-image">
 				<img data-th-src="@{/images/carton.jpg}" alt="Image de l'article">
@@ -42,15 +42,15 @@
 			<div class="article-details">
 				<p class="article-details-h4" data-th-text="*{item.description}">Description</p>
 				<div class="article-card-detail">
-					<p><strong>Catégorie :</strong> <span data-th-text="*{item.categorieArticle.libelle}">Catégorie</span></p>
-					<p><strong>Date de fin :</strong> <span data-th-text="*{item.dateFinEnchere}">2024-01-01</span></p>
-					<p><strong>Vendeur :</strong> <span data-th-text="*{item.vend.pseudo}">Pseudo</span></p>
+					<p><strong>Catégorie :</strong> <span data-th-text="*{item.cartegoryArticle.wording}">Catégorie</span></p>
+					<p><strong>Date de fin :</strong> <span data-th-text="*{item.endDateAuctions}">2024-01-01</span></p>
+					<p><strong>Vendeur :</strong> <span data-th-text="*{item.sell.pseudo}">Pseudo</span></p>
 				</div>
 			</div>
 
 			<div class="article-actions">
 				<a class="details-btn" th:if="${#authorization.expression('isAuthenticated()')}"
-				   data-th-href="@{/vente/detail(id=${item.noArticle})}">
+				   data-th-href="@{/vente/detail(id=${item.idArticle})}">
 					Détail de la vente
 				</a>
 			</div>
