--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -45,11 +45,11 @@
 				</div>
 
 				<div class="form-group">
-					<h5>Nom : <span data-th-text="*{nom}"></span></h5>
+					<h5>Nom : <span data-th-text="*{lastName}"></span></h5>
 				</div>
 
 				<div class="form-group">
-					<h5>Prénom : <span data-th-text="*{prenom}"></span></h5>
+					<h5>Prénom : <span data-th-text="*{firstName}"></span></h5>
 				</div>
 
 				<div class="form-group">
@@ -57,11 +57,11 @@
 				</div>
 
 				<div class="form-group">
-					<h5>Telephone : <span data-th-text="*{telephone}"></span></h5>
+					<h5>Telephone : <span data-th-text="*{phone}"></span></h5>
 				</div>
 
 				<div class="form-group">
-					<h5>Adresse : <span data-th-text="*{rue}"></span>, <span data-th-text="*{codePostal}"></span> <span data-th-text="*{ville}"></span></h5>
+					<h5>Adresse : <span data-th-text="*{road}"></span>, <span data-th-text="*{zipPass}"></span> <span data-th-text="*{city}"></span></h5>
 				</div>
 
 			</div>
