--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -45,15 +45,15 @@
 			</div>
 
 			<div class="form-group">
-				<label for="nom">Nom</label>
-				<div data-th-replace="~{fragments/fragment-error :: frag-error('nom')}"></div>
-				<input type="text" id="nom" class="form-control" data-th-field="*{nom}" placeholder="Entrez votre nom" />
+				<label for="lastName">Nom</label>
+				<div data-th-replace="~{fragments/fragment-error :: frag-error('lastName')}"></div>
+				<input type="text" id="lastName" class="form-control" data-th-field="*{lastName}" placeholder="Entrez votre nom" />
 			</div>
 
 			<div class="form-group">
-				<label for="prenom">Prénom</label>
-				<div data-th-replace="~{fragments/fragment-error :: frag-error('prenom')}"></div>
-				<input type="text" id="prenom" class="form-control" data-th-field="*{prenom}" placeholder="Entrez votre prénom" />
+				<label for="firstName">Prénom</label>
+				<div data-th-replace="~{fragments/fragment-error :: frag-error('firstName')}"></div>
+				<input type="text" id="firstName" class="form-control" data-th-field="*{firstName}" placeholder="Entrez votre prénom" />
 			</div>
 
 			<div class="form-group">
@@ -63,34 +63,34 @@
 			</div>
 
 			<div class="form-group">
-				<label for="telephone">Téléphone</label>
-				<input type="tel" id="telephone" class="form-control" data-th-field="*{telephone}" placeholder="Entrez votre téléphone" />
+				<label for="phone">Téléphone</label>
+				<input type="tel" id="phone" class="form-control" data-th-field="*{phone}" placeholder="Entrez votre téléphone" />
 			</div>
 
 			<div class="form-group">
-				<label for="rue">Rue</label>
-				<input type="text" id="rue" class="form-control" data-th-field="*{rue}" placeholder="Entrez votre adresse" />
+				<label for="road">Rue</label>
+				<input type="text" id="road" class="form-control" data-th-field="*{road}" placeholder="Entrez votre adresse" />
 			</div>
 
 			<div class="form-group">
-				<label for="codePostal">Code Postal</label>
-				<input type="text" id="codePostal" class="form-control" data-th-field="*{codePostal}" placeholder="Entrez votre code postal" />
+				<label for="zipPass">Code Postal</label>
+				<input type="text" id="zipPass" class="form-control" data-th-field="*{zipPass}" placeholder="Entrez votre code postal" />
 			</div>
 
 			<div class="form-group">
-				<label for="ville">Ville</label>
-				<input type="text" id="ville" class="form-control" data-th-field="*{ville}" placeholder="Entrez votre ville" />
+				<label for="city">Ville</label>
+				<input type="text" id="city" class="form-control" data-th-field="*{city}" placeholder="Entrez votre ville" />
 			</div>
 
 			<div class="form-group">
-				<label for="motDePasse">Mot de Passe</label>
-				<div data-th-replace="~{fragments/fragment-error :: frag-error('motDePasse')}"></div>
-				<input type="password" id="motDePasse" class="form-control" data-th-field="*{motDePasse}" placeholder="Entrez votre mot de passe" />
+				<label for="passWord">Mot de Passe</label>
+				<div data-th-replace="~{fragments/fragment-error :: frag-error('passWord')}"></div>
+				<input type="password" id="passWord" class="form-control" data-th-field="*{passWord}" placeholder="Entrez votre mot de passe" />
 			</div>
 
 			<div class="form-group">
-				<label for="confirmMdP">Confirmation du mot de passe</label>
-				<input type="password" id="confirmMdP" class="form-control" name="confirmMdP" placeholder="Confirmez votre mot de passe" />
+				<label for="confirmPassword">Confirmation du mot de passe</label>
+				<input type="password" id="confirmPassword" class="form-control" name="confirmPassword" placeholder="Confirmez votre mot de passe" />
 			</div>
 		</div>
 
