--- a/src/main/resources/templates/contexte/view-user-contexte.html
+++ b/src/main/resources/templates/contexte/view-user-contexte.html
@@ -12,10 +12,10 @@
 
 	<div th:insert="fragments/fragment-navbar"></div>
 	<main class="center-main">
-		<h1>utilisateur en session</h1>
+		<h1>user en session</h1>
 		<div th:text="${utilisateurSession}"></div>
 
-		<h1>utilisateur en request</h1>
+		<h1>user en request</h1>
 		<div th:text="${utilisateurRequest}"></div>
 
 	</main>
