--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>ENI Enchères - Connexion</title>
     <link rel="icon" data-th-href="@{/images/logoEnchere-1.png}" />
-    <link rel="stylesheet" data-th-href="@{/css/main.css}">
-    <link rel="stylesheet" data-th-href="@{/css/error.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel="stylesheet" th:href="@{/css/error.css}">
 </head>
 <body>
 <header xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-entete">
