--- a/src/main/resources/templates/detail-sale.html
+++ b/src/main/resources/templates/detail-sale.html
@@ -36,7 +36,7 @@
 <main class="center-main">
 
 
-	<form th:action="@{/vente/detail}" th:object="${itemSold}" method="post">
+	<form th:action="@{/vente/detail}" th:object="${soldArticles}" method="post">
 		<h3>Détail de l'article <span data-th-text="*{idArticle}"></span></h3>
 		<div class="form-container">
 
@@ -49,7 +49,7 @@
 			</div>
 
 			<div class="form-group">
-				<h5>Catégorie : <span data-th-text="*{cartegoryArticle.wording}"></span></h5>
+				<h5>Catégorie : <span data-th-text="*{cartegoryArticle.categoryName}"></span></h5>
 			</div>
 
 			<div class="form-group">
@@ -77,7 +77,7 @@
 		</div>
 	</form>
 
-	<form th:action="@{/vente/auctions}" method="post" th:object="${itemSold}">
+	<form th:action="@{/vente/auctions}" method="post" th:object="${soldArticles}">
 		<div class="form-container">
 			<input type="hidden" th:field="*{idArticle}" />
 			<div class="form-group">
