--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -83,9 +83,9 @@
 			</div>
 
 			<div class="form-group">
-				<label for="passWord">Mot de Passe</label>
-				<div data-th-replace="~{fragments/fragment-error :: frag-error('passWord')}"></div>
-				<input type="password" id="passWord" class="form-control" data-th-field="*{passWord}" placeholder="Entrez votre mot de passe" />
+				<label for="password">Mot de Passe</label>
+				<div data-th-replace="~{fragments/fragment-error :: frag-error('password')}"></div>
+				<input type="password" id="password" class="form-control" data-th-field="*{password}" placeholder="Entrez votre mot de passe" />
 			</div>
 
 			<div class="form-group">
