--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -24,7 +24,7 @@
 				<li><a aria-current="page" data-th-href="@{/}">Accueil</a></li>
 				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/vente}">Ventes</a></li>
 				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/user/inscription}">Inscription</a></li>
-				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/user/profil}">Profil</a></li>
+				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/user/profile}">Profil</a></li>
 				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/login}">Connexion</a></li>
 				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/logout}">Déconnexion</a></li>
 			</ul>
@@ -41,15 +41,15 @@
 			<input type="hidden" data-th-field="*{idUser}" />
 
 			<div class="form-group">
-				<label for="nom">Nom</label>
-				<div data-th-replace="~{fragments/fragment-error :: frag-error('nom')}"></div>
-				<input type="text" id="nom" class="form-control" data-th-field="*{lastName}" />
+				<label for="lastName">Nom</label>
+				<div data-th-replace="~{fragments/fragment-error :: frag-error('lastName')}"></div>
+				<input type="text" id="lastName" class="form-control" data-th-field="*{lastName}" />
 			</div>
 
 			<div class="form-group">
-				<label for="prenom">Prénom</label>
-				<div data-th-replace="~{fragments/fragment-error :: frag-error('prenom')}"></div>
-				<input type="text" id="prenom" class="form-control" data-th-field="*{firstName}" />
+				<label for="firstName">Prénom</label>
+				<div data-th-replace="~{fragments/fragment-error :: frag-error('firstName')}"></div>
+				<input type="text" id="firstName" class="form-control" data-th-field="*{firstName}" />
 			</div>
 
 			<div class="form-group">
@@ -58,29 +58,29 @@
 			</div>
 
 			<div class="form-group">
-				<label for="telephone">Téléphone</label>
-				<input type="text" id="telephone" class="form-control" data-th-field="*{phone}" />
+				<label for="phone">Téléphone</label>
+				<input type="text" id="phone" class="form-control" data-th-field="*{phone}" />
 			</div>
 
 			<div class="form-group">
-				<label for="rue">Rue</label>
-				<input type="text" id="rue" class="form-control" data-th-field="*{road}" />
+				<label for="road">Rue</label>
+				<input type="text" id="road" class="form-control" data-th-field="*{road}" />
 			</div>
 
 			<div class="form-group">
-				<label for="codePostal">Code Postal</label>
-				<input type="text" id="codePostal" class="form-control" data-th-field="*{zipPass}" />
+				<label for="zipPass">Code Postal</label>
+				<input type="text" id="zipPass" class="form-control" data-th-field="*{zipPass}" />
 			</div>
 
 			<div class="form-group">
-				<label for="ville">Ville</label>
-				<input type="text" id="ville" class="form-control" data-th-field="*{city}" />
+				<label for="city">Ville</label>
+				<input type="text" id="city" class="form-control" data-th-field="*{city}" />
 			</div>
 
 			<div class="form-group">
-				<label for="motDePasse">Mot de passe (pour confirmer)</label>
-				<div data-th-replace="~{fragments/fragment-error :: frag-error('motDePasse')}"></div>
-				<input type="password" id="motDePasse" class="form-control" data-th-field="*{passWord}" />
+				<label for="password">Mot de passe (pour confirmer)</label>
+				<div data-th-replace="~{fragments/fragment-error :: frag-error('password')}"></div>
+				<input type="password" id="password" class="form-control" data-th-field="*{password}" />
 			</div>
 		</div>
 
