--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,30 +27,30 @@
 
 	<div class="article-list">
 
-		<div class="article-card" data-th-each="item : ${soldArticle}">
+		<div class="article-card" data-th-each="item : ${soldArticlesViewModel}">
 			<div class="rounded-likes">
-				<span data-th-text="*{item.initialPrice}">0</span> €
+				<span data-th-text="*{item.soldArticles.initialPrice}">0</span> €
 				<p>👌</p>
 			</div>
 
-			<h4 data-th-text="*{item.nameArticle}">Nom de l'article</h4>
+			<h4 data-th-text="*{item.soldArticles.nameArticle}">Nom de l'article</h4>
 
 			<div class="article-image">
 				<img data-th-src="@{/images/carton.jpg}" alt="Image de l'article">
 			</div>
 
 			<div class="article-details">
-				<p class="article-details-h4" data-th-text="*{item.description}">Description</p>
+				<p class="article-details-h4" data-th-text="*{item.soldArticles.description}">Description</p>
 				<div class="article-card-detail">
-<!--					<p><strong>Catégorie :</strong> <span data-th-text="*{item.}">Catégorie</span></p>-->
-					<p><strong>Date de fin :</strong> <span data-th-text="*{item.endDateAuctions}">2024-01-01</span></p>
+					<p><strong>Catégorie :</strong> <span data-th-text="*{item.category.categoryName}">Catégorie</span></p>
+					<p><strong>Date de fin :</strong> <span data-th-text="*{item.soldArticles.endDateAuctions}">2024-01-01</span></p>
 <!--					<p><strong>Vendeur :</strong> <span data-th-text="*{item.pseudo}">Pseudo</span></p>-->
 				</div>
 			</div>
 
 			<div class="article-actions">
 				<a class="details-btn" th:if="${#authorization.expression('isAuthenticated()')}"
-				   data-th-href="@{/vente/detail(id=${item.idArticle})}">
+				   data-th-href="@{/vente/detail(id=${item.soldArticles.idArticle})}">
 					Détail de la vente
 				</a>
 			</div>
