welcome page search article

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,9 +12,9 @@
 	<h3>Liste des Enchères</h3>
 
 	<div class="search-container">
-		<form action="rechercher" class="search-form">
+		<form action="/search" method="get" class="search-form">
 			<div class="search-wrapper">
-				<input type="text" name="nom" class="form-control search-input" placeholder="Saisir votre recherche...">
+				<input type="text" name="searchArticleName" class="form-control search-input" placeholder="Saisir votre recherche...">
 				<button class="btn btn-primary search-button">Recherche</button>
 			</div>
 		</form>
