welcome page print article seller pseudo

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,7 +44,7 @@
 				<div class="article-card-detail">
 					<p><strong>Catégorie :</strong> <span data-th-text="*{item.category.categoryName}">Catégorie</span></p>
 					<p><strong>Date de fin :</strong> <span data-th-text="*{item.soldArticles.endDateAuctions}">2024-01-01</span></p>
-<!--					<p><strong>Vendeur :</strong> <span data-th-text="*{item.pseudo}">Pseudo</span></p>-->
+					<p><strong>Vendeur :</strong> <span data-th-text="*{item.seller.pseudo}">Pseudo</span></p>
 				</div>
 			</div>
 
