--- a/src/main/resources/templates/detail-sale.html
+++ b/src/main/resources/templates/detail-sale.html
@@ -24,7 +24,7 @@
 		<div id="navbarTogglerDemo02">
 			<ul>
 				<li><a aria-current="page" data-th-href="@{/}">Accueil</a></li>
-				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/vente}">Ventes</a></li>
+				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/sales}">Ventes</a></li>
 				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/user/inscription}">Inscription</a></li>
 				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/user/profile}">Profil</a></li>
 				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/login}">Connexion</a></li>
@@ -36,60 +36,57 @@
 <main class="center-main">
 
 
-	<form th:action="@{/vente/detail}" th:object="${soldArticles}" method="post">
-		<h3>Détail de l'article <span data-th-text="*{id}"></span></h3>
+	<form th:action="@{/sales/detail}" th:object="${soldArticleViewModel}" method="post">
+		<h3>Détail de l'article <span data-th-text="*{soldArticles.nameArticle}"></span></h3>
 		<div class="form-container">
-
 			<div class="form-group">
-				<h5>Article : <span data-th-text="*{name}"></span></h5>
+				<h5>Article : <span data-th-text="*{soldArticles.nameArticle}"></span></h5>
 			</div>
 
 			<div class="form-group">
-				<h5>Description : <span data-th-text="*{description}"></span></h5>
+				<h5>Description : <span data-th-text="*{soldArticles.description}"></span></h5>
 			</div>
 
 			<div class="form-group">
-				<h5>Catégorie : <span data-th-text="*{cartegoryArticle.categoryName}"></span></h5>
+				<h5>Catégorie : <span data-th-text="*{category.categoryName}"></span></h5>
 			</div>
 
 			<div class="form-group">
-				<h5>Prix de départ : <span data-th-text="*{initialPrice}"></span></h5>
+				<h5>Prix de départ : <span data-th-text="*{soldArticles.initialPrice}"></span>€</h5>
 			</div>
 
 			<div class="form-group">
-				<h5>Date de début : <span data-th-text="*{startDateAuctions}"></span></h5>
+				<h5>Date de début : <span data-th-text="*{soldArticles.startDateAuctions}"></span></h5>
 			</div>
 
 			<div class="form-group">
-				<h5>Date de fin : <span data-th-text="*{endDateAuctions}"></span></h5>
+				<h5>Date de fin : <span data-th-text="*{soldArticles.endDateAuctions}"></span></h5>
 			</div>
 
 			<div class="form-group">
-				<h5>Lieu de pickUp : <span data-th-text="*{pickUpLocation.road}"></span>, <span data-th-text="*{pickUpLocation.zipPass}"></span> <span data-th-text="*{pickUpLocation.city}"></span></h5>
-			</div>
-
-		</div>
-			<div class="form-group">
-				<label for="image">Image</label>
-				<img src="/images/carton.jpg" alt="Prévisualisation de l'image" class="resized-image">
+				<h5>Lieu de pickUp : <span data-th-text="*{pickUpLocation.road}"></span> <span data-th-text="*{pickUpLocation.zipPass}"></span> <span data-th-text="*{pickUpLocation.city}"></span></h5>
 			</div>
 		</div>
+
+		<div class="form-group">
+			<label for="imageArticle">Image</label>
+			<img id="imageArticle" src="/images/carton.jpg" alt="Prévisualisation de l'image" class="resized-image">
 		</div>
 	</form>
 
-	<form th:action="@{/vente/auctions}" method="post" th:object="${soldArticles}">
+	<form th:action="@{/sales/auctions}" method="post" th:object="${soldArticleViewModel}">
 		<div class="form-container">
-			<input type="hidden" th:field="*{idArticle}" />
+			<input type="hidden" th:field="*{soldArticles.idArticle}"/>
 			<div class="form-group">
-				<h5>Prix de vente : <span data-th-text="*{initialPrice}"></span></h5>
+				<h5>Prix de vente : <span data-th-text="*{soldArticles.initialPrice}"></span>€</h5>
 			</div>
 			<div class="form-group">
-				<h5>Nouveaux prix : <span data-th-text="*{priceSale}"></span></h5>
+				<h5>Nouveaux prix : <span data-th-text="*{soldArticles.priceSale}"></span>€</h5>
 			</div>
 
 			<div class="form-group">
 				<label for="amountAuctions">Montant de l'enchère</label>
-				<input type="number" name="amountAuctions" th:value="*{initialPrice}" class="form-control" />
+				<input id="amountAuctions" type="number" name="amountAuctions" th:value="*{soldArticles.initialPrice}" class="form-control" />
 			</div>
 
 			<div class="form-actions">
