--- a/src/main/resources/templates/sell.html
+++ b/src/main/resources/templates/sell.html
@@ -22,7 +22,7 @@
 		<div id="navbarTogglerDemo02">
 			<ul>
 				<li><a aria-current="page" data-th-href="@{/}">Accueil</a></li>
-				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/vente}">Ventes</a></li>
+				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/sales}">Ventes</a></li>
 				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/user/inscription}">Inscription</a></li>
 				<li th:if="${#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/user/profile}">Profil</a></li>
 				<li th:if="${!#authorization.expression('isAuthenticated()')}"><a data-th-href="@{/login}">Connexion</a></li>
@@ -35,7 +35,7 @@
 <main class="center-main">
 	<h3>Nouvelle Vente</h3>
 	<p>Veuillez remplir les informations nécessaires pour proposer un nouvel article en vente.</p>
-	<form th:action="@{/vente}" method="post" th:object="${soldArticleViewModel}">
+	<form th:action="@{/sales}" method="post" th:object="${soldArticleViewModel}">
 		<div class="form-container">
 			<div class="form-group">
 				<label for="nameArticle">Nom de l'article</label>
