--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -38,7 +38,7 @@
 
 			<h3>Profil de <span data-th-text="*{pseudo}"></span></h3>
 
-			<div class="form-container">
+			<div class="form-container-profil">
 
 				<div class="form-group">
 					<h5>Pseudo : <span data-th-text="*{pseudo}"></span></h5>
@@ -61,7 +61,7 @@
 				</div>
 
 				<div class="form-group">
-					<h5>Adresse : <span data-th-text="*{road}"></span>, <span data-th-text="*{zipPass}"></span> <span data-th-text="*{city}"></span></h5>
+					<h5>Adresse : <span data-th-text="*{road}"></span> <span data-th-text="*{zipPass}"></span> <span data-th-text="*{city}"></span></h5>
 				</div>
 
 			</div>
