--- a/src/main/resources/static/css/error.css
+++ b/src/main/resources/static/css/error.css
@@ -1,10 +1,5 @@
 @charset "UTF-8";
 .cards {
-   	display: flex;
-   	flex-direction: column;
-   	justify-content: space-around;
-   	background-color: #ff6a6a;
-   	border-radius: 3px;
-	margin: 5px;
+	color: red;
 	list-style-type: none;
 }
