--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -51,6 +51,16 @@ form {
     grid-template-columns: repeat(2, 1fr);
     gap: 35px;
     width: 100%;
+    align-items: center;
+}
+
+.form-container-profil {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    width: 50%;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .form-group {
@@ -166,7 +176,6 @@ input.form-control:focus, select:focus {
     }
 }
 
-/* Header Styles */
 header {
     background-color: white;
     border-bottom: 3px solid #f0a10f;
@@ -256,7 +265,6 @@ nav .toggle-button:hover {
     }
 }
 
-/* Article Card Styles */
 .article-list {
     display: flex;
     flex-wrap: wrap;
@@ -329,7 +337,22 @@ nav .toggle-button:hover {
     background-color: #f0a10f;
 }
 
-/* Footer Styles */
+.details-btn-modify {
+    display: inline-block;
+    background-color: #f0a10f;
+    color: white;
+    padding: 10px 15px;
+    font-size: 0.9em;
+    font-weight: bold;
+    border-radius: 4px;
+    text-decoration: none;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.details-btn-modify:hover {
+    background-color: #326135;
+}
+
 .footer {
     background-color: #333;
     color: #fff;
@@ -445,7 +468,7 @@ div.rounded-likes {
 }
 
 .error-message, .logout-message {
-    color: #d9534f;
+    color: red;
     margin-bottom: 15px;
 }
 
@@ -455,6 +478,14 @@ div.rounded-likes {
 
 .resized-image {
     width: 30%;
+    height: auto;
+    border: 1px solid #ddd;
+    margin: 10px auto;
+    display: block;
+}
+
+.img-detail {
+    width: 50%;
     height: auto;
     border: 1px solid #ddd;
     margin: 10px auto;
