--- a/src/main/resources/templates/detail-sale.html
+++ b/src/main/resources/templates/detail-sale.html
@@ -70,7 +70,8 @@
 
 		<div class="form-group">
 			<label for="imageArticle">Image</label>
-			<img id="imageArticle" src="/images/carton.jpg" alt="Prévisualisation de l'image" class="resized-image">
+			<img id="imageArticle" th:src="@{${soldArticleViewModel.soldArticles.picture != null ? '/images/uploads/' + soldArticleViewModel.soldArticles.picture : '/images/carton.jpg'}}"
+				 th:alt="${soldArticleViewModel.soldArticles.picture}" class="img-detail">
 		</div>
 	</form>
 
