--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -51,11 +51,11 @@
             <input type="password" id="idPassword" name="password" class="form-control" placeholder="Votre Mot de passe"/>
         </div>
 
-        <div class="form-group remember-me">
-            <label>
-                <input type="checkbox" name="rememberMe" /> Se souvenir de moi
-            </label>
-        </div>
+<!--        <div class="form-group remember-me">-->
+<!--            <label>-->
+<!--                <input type="checkbox" name="rememberMe" /> Se souvenir de moi-->
+<!--            </label>-->
+<!--        </div>-->
 
         <button type="submit" class="btn btn-primary">Connexion</button>
         <a href="#" class="btn btn-secondary">Mot de passe oublié ?</a>
