--- a/src/main/resources/templates/sell.html
+++ b/src/main/resources/templates/sell.html
@@ -35,7 +35,7 @@
 <main class="center-main">
 	<h3>Nouvelle Vente</h3>
 	<p>Veuillez remplir les informations nécessaires pour proposer un nouvel article en vente.</p>
-	<form th:action="@{/sales}" method="post" th:object="${soldArticleViewModel}">
+	<form th:action="@{/sales}" method="post" enctype="multipart/form-data" th:object="${soldArticleViewModel}">
 		<div class="form-container">
 			<div class="form-group">
 				<label for="nameArticle">Nom de l'article</label>
@@ -90,8 +90,8 @@
 		</div>
 		<div class="form-container">
 			<div class="form-group">
-				<label for="image">Image</label>
-				<img src="/images/carton.jpg" alt="Prévisualisation de l'image" class="resized-image">
+				<label for="picture">Image</label>
+				<input type="file" id="picture" name="picture" class="photoInput form-control" accept=".png,.jpg,.jpeg"/>
 			</div>
 		</div>
 
