added avatar picture, edit price : delete "€"

--- a/src/main/resources/templates/detail-sale.html
+++ b/src/main/resources/templates/detail-sale.html
@@ -52,7 +52,7 @@
 			</div>
 
 			<div class="form-group">
-				<h5>Prix de départ : <span data-th-text="*{soldArticles.initialPrice}"></span>€</h5>
+				<h5>Prix de départ : <span data-th-text="*{soldArticles.initialPrice}"></span></h5>
 			</div>
 
 			<div class="form-group">
@@ -79,10 +79,10 @@
 		<div class="form-container">
 			<input type="hidden" th:field="*{soldArticles.idArticle}"/>
 			<div class="form-group">
-				<h5>Prix de vente : <span data-th-text="*{soldArticles.initialPrice}"></span>€</h5>
+				<h5>Prix de vente : <span data-th-text="*{soldArticles.initialPrice}"></span></h5>
 			</div>
 			<div class="form-group">
-				<h5>Nouveaux prix : <span data-th-text="*{soldArticles.priceSale}"></span>€</h5>
+				<h5>Nouveaux prix : <span data-th-text="*{soldArticles.priceSale}"></span></h5>
 			</div>
 
 			<div class="form-group">
