--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -64,6 +64,11 @@
 					<h5>Adresse : <span data-th-text="*{road}"></span> <span data-th-text="*{zipPass}"></span> <span data-th-text="*{city}"></span></h5>
 				</div>
 
+				<div class="form-group">
+					<label for="pictureProfil">Photo de profil</label>
+					<img src="/images/avatar.png" id="pictureProfil" class="img-detail">
+				</div>
+
 			</div>
 				<div class="form-actions">
 					<a data-th-href="@{/user/update}" class="btn btn-primary">Mise à jour du profil</a>
