--- a/src/main/resources/templates/sell.html
+++ b/src/main/resources/templates/sell.html
@@ -38,12 +38,13 @@
 	<form th:action="@{/sales}" method="post" enctype="multipart/form-data" th:object="${soldArticleViewModel}">
 		<div class="form-container">
 			<div class="form-group">
-				<label for="nameArticle">Nom de l'article</label>
 				<div th:replace="~{fragments/fragment-error :: frag-error('soldArticles.nameArticle')}"></div>
+				<label for="nameArticle">Nom de l'article</label>
 				<input type="text" id="nameArticle" class="form-control" data-th-field="*{soldArticles.nameArticle}" placeholder="Entrez le nom de l'article" />
 			</div>
 
 			<div class="form-group">
+				<div th:replace="~{fragments/fragment-error :: frag-error('soldArticles.description')}"></div>
 				<label for="description">Description</label>
 				<input type="text" id="description" class="form-control" data-th-field="*{soldArticles.description}" placeholder="Entrez une description" />
 			</div>
@@ -57,18 +58,29 @@
 			</div>
 
 			<div class="form-group">
+				<div th:replace="~{fragments/fragment-error :: frag-error('soldArticles.initialPrice')}"></div>
 				<label for="initialPrice">Prix de départ</label>
 				<input type="number" id="initialPrice" class="form-control" data-th-field="*{soldArticles.initialPrice}" placeholder="Entrez le prix de départ" />
 			</div>
 
 			<div class="form-group">
+				<div th:replace="~{fragments/fragment-error :: frag-error('soldArticles.startDateAuctions')}"></div>
 				<label for="startDateAuctions">Date de début</label>
-				<input type="date" id="startDateAuctions" class="form-control" data-th-field="*{soldArticles.startDateAuctions}" />
+				<input type="date" id="startDateAuctions"
+					   class="form-control"/>
 			</div>
 
 			<div class="form-group">
+				<div class="invalid-feedback"
+					 th:if="${#fields.hasErrors('soldArticles.endDateAuctions')}"
+					 th:errors="*{soldArticles.endDateAuctions}">
+				</div>
 				<label for="endDateAuctions">Date de fin</label>
-				<input type="date" id="endDateAuctions" class="form-control" data-th-field="*{soldArticles.endDateAuctions}" />
+				<input type="date" id="endDateAuctions"
+					   class="form-control"
+					   th:field="*{soldArticles.endDateAuctions}"
+					   th:errorclass="is-invalid" />
+
 			</div>
 
 			<div class="form-group">
